# coffee-finder

./: README.md  build_installer.bat  build_installer.sh  check_w3w.py  coffee-finder-gui.spec  coffee-finder-tray.spec  coffee-finder.iss  coffee-finder.spec  pyproject.toml  requirements-dev.txt  requirements.txt
coffee_finder/: __init__.py  auth.py  cache.py  config.py  database.py  gui.py  login.py  main.py  providers.py  tray.py  utils.py
coffee_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_auth.py  test_cache.py  test_config.py  test_database.py  test_main.py  test_migration.py  test_providers.py  test_tray.py  test_utils.py  test_what3words.py
